# tick-liq

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  audit.toml  docker-compose.yml
.cargo/: audit.toml
.githooks/: pre-push
.github/workflows/: ci.yml  claude-review.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-persistence/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-shadow-mode/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-real-data-backtest/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-VERIFICATION.md
.planning/phases/04-slippage-guard/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-live-execution/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-SECURITY.md  05-UAT.md  05-VERIFICATION.md
.planning/phases/06-risk-limits/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-REVIEW.md  06-VERIFICATION.md
.planning/phases/07-telegram-bot/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-VERIFICATION.md
.planning/phases/11-cex-price-feed-via-binance-websocket/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-CONTEXT.md  11-DISCUSSION-LOG.md  11-HUMAN-UAT.md  11-RESEARCH.md  11-REVIEW-FIX.md  11-REVIEW.md  11-UAT.md  11-VERIFICATION.md
.planning/phases/11.1-migrate-solana-sdk-1-18-to-2-x-and-anchor-0-29-to-0-30-resol/: 11.1-01-PLAN.md  11.1-01-SUMMARY.md  11.1-02-PLAN.md  11.1-02-SUMMARY.md  11.1-03-PLAN.md  11.1-03-SUMMARY.md  11.1-04-PLAN.md  11.1-04-SUMMARY.md  11.1-05-PLAN.md  11.1-05-SUMMARY.md  11.1-CONTEXT.md  11.1-DISCUSSION-LOG.md  11.1-HUMAN-UAT.md  11.1-RESEARCH.md  11.1-REVIEW-FIX.md  11.1-REVIEW.md  11.1-VERIFICATION.md
.planning/quick/260411-k7g-add-optional-entry-price-flag-to-watch-s/: 260411-k7g-PLAN.md  260411-k7g-SUMMARY.md
.planning/quick/260411-ku8-bug-fix-drawdown-halt-triggers-on-noise-/: 260411-ku8-PLAN.md  260411-ku8-SUMMARY.md
.planning/quick/260411-l5d-bug-entry-price-ignored-in-watch-loop-il/: 260411-l5d-PLAN.md  260411-l5d-SUMMARY.md
.planning/quick/260411-qr9-bug-entry-price-watch-il-0/: 260411-qr9-SUMMARY.md
docs/: architecture.md  math-validation.md  research.md
docs/grafana/: README.md  tick-liq-overview.json
examples/: config.toml.example
migrations/: 20260407000001_positions.up.sql  20260407000002_pool_ticks.down.sql  20260407000002_pool_ticks.up.sql  20260407000003_pnl_history.down.sql  20260407000003_pnl_history.up.sql  20260407000004_rebalance_events.down.sql  20260407000004_rebalance_events.up.sql
research/: analyze.py  experiments.toml  requirements.txt
research/data/: results.csv
scripts/: install-hooks.sh
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  observability.rs  research.rs  rpc.rs
src/analytics/: amounts.rs  depth.rs  greeks.rs  mod.rs  pnl.rs
src/backtest/: backfill.rs  db_replay.rs  mod.rs
src/bot/: commands.rs  mod.rs  proposal.rs  queries.rs
src/data/: cex_ws.rs  coinbase_ws.rs  geckoterminal.rs  mod.rs  prices.rs  rpc.rs  ws.rs
src/display/: table.rs
src/execution/: CLAUDE.md  hedge.rs  mod.rs  orca_executor.rs  rebalance.rs  shadow_guard.rs  tx.rs  whirlpool_tx.rs
src/math/: CLAUDE.md  amounts.rs  fees.rs  greeks.rs  il.rs  impact.rs  liquidity.rs  metrics.rs  mod.rs  smoke_demo.rs  sqrt_price.rs  tick.rs
src/metrics/: mod.rs
src/protocols/: mod.rs  orca.rs  raydium.rs
src/storage/: events.rs  mod.rs  pnl.rs  positions.rs  schema.sql  tick_reader.rs  ticks.rs  writer.rs
src/strategy/: backtest.rs  fees.rs  mod.rs  pnl.rs  range.rs  risk_monitor.rs  signal.rs  slippage.rs
tests/: e2e_rebalance.rs  greeks_props.rs  il_props.rs  liquidity_props.rs  live_rebalance.rs  math_golden.rs  math_props.rs  persistence_integration.rs  pnl_props.rs  shadow_gate_integration.rs  slippage_tests.rs  storage_db.rs  tick_props.rs
tests/fixtures/: backtest_sample.csv  orca_vectors.json
(+17 files in other folders)
