[package]
name = "tick-liq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lp-inspect"
path = "src/main.rs"

[dependencies]
# Solana
solana-client = "1.18"
solana-sdk = "1.18"

# Orca math
orca_whirlpools_core = "2"

# 256-bit integer for intermediate sqrt-price * amount products that
# overflow u128. Already pulled in transitively by orca_whirlpools_core.
ethnum = "1"

# Serialization
borsh = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config
toml = "0.8"

# Time (for watch command)
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for CEX price polls
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Storage (sqlx 0.6 + Postgres/TimescaleDB).
# We pin sqlx 0.6 (not 0.7+) because 0.7+ unconditionally depends on
# sqlx-mysql, whose rsa→zeroize chain conflicts with solana-client 1.18's
# curve25519-dalek (which needs zeroize <1.4). 0.6 keeps mysql behind a
# feature flag, so default-features=false drops it cleanly.
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal", "macros", "migrate"] }
bigdecimal = "0.3"

[dev-dependencies]
proptest = "1"
wiremock = "0.5"

[features]
# Enable integration tests that require a live Postgres+TimescaleDB.
# Run with: cargo test --features db-tests
db-tests = []