[package]
name = "tick-liq"
version = "0.1.0"
edition = "2021"

[lib]
name = "tick_liq"
path = "src/lib.rs"

[[bin]]
name = "lp-inspect"
path = "src/main.rs"

[dependencies]
# Solana
solana-client = "1.18"
solana-sdk = "1.18"

# Orca math
orca_whirlpools_core = "2"

# Serialization
borsh = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time (for watch command)
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sqlx-core = { version = "0.8", default-features = false, features = ["_tls-native-tls", "_rt-tokio"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["chrono"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }
dptree = "0.3"

[dev-dependencies]
proptest = "1"